--- a/ca1_group_k/.env.example
+++ b/ca1_group_k/.env.example
@@ -7,3 +7,6 @@ JWT_SECRET_KEY=YOUR_SECRET_KEY_HERE
 # MongoDB Configuration
 MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.mongodb.net/?appName=YourApp
 MONGODB_DATABASE_NAME=YourDatabaseName
+
+#HMAC SECRET KEY
+HMAC_SECRET_KEY=your_super_secret_key_that_is_at_least_32_characters_long_for_security
