--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ target
 ca1_group_k/WHAT_I_CREATED.md
 ca1_group_k/MONGODB_LEARNING_GUIDE.md
 ca1_group_k/JWT_QUICKSTART.md
+/.idea
 
 # Environment variables and sensitive configuration files
 ca1_group_k/.env
