Added several QOL changes

--- a/ca1_group_k/.env.example
+++ b/ca1_group_k/.env.example
@@ -1,12 +1,21 @@
 # Environment Configuration Template
 # Copy this file to .env and fill in your actual values
+# ⚠️ WARNING: Never commit the .env file to version control!
 
 # JWT Configuration
+# Secret key for signing JWT tokens - use a long, random string (minimum 32 characters)
 JWT_SECRET_KEY=YOUR_SECRET_KEY_HERE
 
 # MongoDB Configuration
+# Get this from MongoDB Atlas: Clusters → Connect → Connect your application
 MONGODB_CONNECTION_STRING=mongodb+srv://username:password@cluster.mongodb.net/?appName=YourApp
 MONGODB_DATABASE_NAME=YourDatabaseName
 
-#HMAC SECRET KEY
+# AES Encryption Key
+# Base64-encoded 16-byte key for AES-256 encryption
+# Generate with: echo -n "1234567890123456" | base64
+AES_SECRET_KEY=MTIzNDU2Nzg5MDEyMzQ1Ng==
+
+# HMAC Secret Key
+# Secret key for message integrity verification (minimum 32 characters recommended)
 HMAC_SECRET_KEY=your_super_secret_key_that_is_at_least_32_characters_long_for_security
